...
    android:layout_height="match_parent"
    android:background="#C6D4FF"
    tools:context=".login.loginActivity">


    <EditText
        android:id="@+id/editTextPW"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:width="300dp"
        android:ems="10"
        android:fontFamily="@font/americantypewriter"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/bottle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/rhythm"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPW"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <com.google.android.gms.common.SignInButton
...
