...
    android:layout_height="match_parent"
    android:background="@color/myrtle_green"
    tools:context="settings.settingsActivity">


    <Button
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-2sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
...
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TextView"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/createAccBut"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/rhythm"
            android:fontFamily="@font/americantypewriter"
            android:onClick="editAccount"
            android:text="Edit Account"
            android:textColor="@color/lavender_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminLayout"
        android:layout_width="0dp"
...
