...
            android:ems="10"
            android:fontFamily="@font/americantypewriter"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/delAcc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CC0202"
        android:onClick="alert"
        android:text="Delete My Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />
...
