...
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="373dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
...
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/items"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginBottom="164dp"
            android:text="Admin Settings"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
...
